@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Fixed
 - [FRONTEND] Allow skipping unresponsive nodes during HAProxy test_conf
 - [REPUTATION] Changed predator references to barricade
+- [REPUTATION_CTX] Ensure internally defined DBs cannot be modified
 
 
 ## [2.14.2] - Unreleased
